<resources>
    <string name="app_name">Доходы и Расходы</string>
    <string name="balance">Баланс</string>
    <string name="inc_sum">Сумма доходов за месяц</string>
    <string name="sum_exp">Сумма расходов за месяц</string>
    <string name="back_button">Back</string>
    <string name="start_login">Вход</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="lets_in">Войти</string>
    <string name="lets_register">Регистрация</string>
    <string name="Registration">Регистрация</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="datehint">дд.мм.гггг</string>
    <string name="summahint">Сумма</string>
    <string name="append_exp">Добавить расход:</string>
    <string name="append_inc">Добавить доход:</string>
    <string name="exp_csv">Экспортировать расходы в .CSV</string>
    <string name="exp_xlsx">Экспортировать расходы в .XLSX</string>
    <string name="inc_csv">Экспортировать доходы в .CSV</string>
    <string name="inc_xlsx">Экспортировать доходы в .XLSX</string>
    <string name="seven_days">7 дней</string>
    <string name="one_month">1 месяц</string>
    <string name="three_months">3 месяца</string>
    <string-array name="Types_Inc">
        <item>Зарплата</item>
        <item>Подарок</item>
        <item>Другое</item>
    </string-array>
    <string-array name="Types_Exp">
        <item>Продукты</item>
        <item>ЖКХ</item>
        <item>Здоровье</item>
        <item>Одежда</item>
        <item>Развлечения</item>
        <item>Другое</item>
    </string-array>
</resources>