<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="40sp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven_days"
            android:onClick="onSevenDaysClick"
            android:id="@+id/seven_days"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one_month"
            android:onClick="onOneMonthClick"
            android:id="@+id/one_month"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three_months"
            android:onClick="onThreeMonthsClick"
            android:id="@+id/three_months"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <FrameLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IncomesListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="40sp"
            android:id="@+id/list_INC"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>